# Report_service/controllers/3getBotConversationTopicChart.ts
@@ -7,7 +7,7 @@ import { globalVar } from '../utils/globalVar';
 
 dotenv.config();
 export const getBotConversationTopicChart = async (req: Request, res: Response) => {
-    let  referenceId = globalVar.getReferenceId() || 'undefined';
+    let referenceId = globalVar.getReferenceId() || 'undefined';
     log(referenceId, "Executing method: getBotConversationTopicChart");
 
 
@@ -15,10 +15,11 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
 
     if (!realBackendURL) {
         res.status(500).json({
-            error_code: "5000011",
+            error_code: "5000001",
             error_message: "internal server error",
         });
-        log(referenceId, `Response sent: res.status(500).json({ error_code: "internal server error", message: "Real Backend URL is not defined" });`);
+        log(referenceId, "Real Backend URL is not defined");
+        log(referenceId, ` Response sent: res.status(500).json({ error_code: "5000001", message: "internal server error" });`);
         return;
     }
 
@@ -29,22 +30,26 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
 
     if (!botId) {
         res.status(400).json({
-            error_message: "invalid request. invalid field value",
-            error_code: "40000051",
+            error_message: "invalid request",
+            error_code: "40000001",
         });
         log(referenceId, "Bot ID not found in request body");
+        log(referenceId, `Response sent: res.status(400).json({ error_code: "40000001", message: "invalid request" });`);
         return;
     }
+    //Prepare post body from FE
+    const postBodyFromFe = req.body;
     // Validate request hash
-    const validationResult = await validateRequestHash(req, botId, sessionId, hash);
+    const validationResult = await validateRequestHash(botId, sessionId, hash, postBodyFromFe);
 
     // Check if validation failed
-    if (validationResult === "0") {
+    if (!validationResult) {
         res.status(401).json({
             error_message: "unauthenticated",
-            error_code: "40100031"
+            error_code: "40100001"
         });
-        log(referenceId, `Response sent: res.status(500).json({ error_code: "internal server error", message: "Bot ID does not match organization ID" });`);
+        log(referenceId, "Hash validation failed");
+        log(referenceId, `Response sent: res.status(401).json({ error_code: "40100002", message: "unauthenticated" });`);
         return;
     }
 
@@ -57,10 +62,11 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
     const isOrganization = await checkBotOrganization(botId, userId, organizationId);
     if (!isOrganization) {
         res.status(403).json({
-            error_code: "4030031",
+            error_code: "4030001",
             error_message: "forbidden",
         });
-        log(referenceId, `Response sent: res.status(403).json({ error_code: "forbidden", message: "Bot ID does not match organization ID" });`);
+        log(referenceId, "Bot ID does not match organization ID");
+        log(referenceId, `Response sent: res.status(403).json({ error_code: "4030001", message: "forbidden" });`);
         return;
     }
 
@@ -87,12 +93,12 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
         log(referenceId, `Response from real backend: res.status(${realBackendResStatus}).json(${JSON.stringify(responseData)});`);
         log(referenceId, "Send Real Backend Status to FE", ` ${realBackendResStatus}, Response Data:  ${JSON.stringify(responseData)}`);
     } catch (e) {
-
         res.status(500).json({
-            error_code: "5000031",
+            error_code: "5000002",
             error_message: "internal server error",
         });
         log(referenceId, `Error forwarding request to backend: ${e}`);
+        log(referenceId, `Response sent: res.status(500).json({ error_code: "5000002", message: "internal server error" });`);
     }
 }
 
